@@ -5,17 +5,13 @@ import org.sopt.controller.diaryfeedback.dto.DiaryFeedbackListRes;
 import org.sopt.diary.facade.DiaryFacade;
 import org.sopt.diaryfeedback.domain.DiaryFeedback;
 import org.sopt.diaryfeedback.facade.DiaryFeedbackFacade;
-import org.sopt.diaryfeedback.facade.DiaryFeedbackRetriever;
-import org.sopt.diaryfeedback.facade.DiaryFeedbackSaver;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
 public class DiaryFeedbackService {
 
     private final DiaryFeedbackFacade diaryFeedbackFacade;
@@ -26,17 +22,18 @@ public class DiaryFeedbackService {
         diaryFeedbackFacade.save(diaryFeedback);
     }
 
-    public DiaryFeedbackListRes getFeedbackList(final long userId, final long diaryId){
-        diaryFacade.validateDiaryOwnership(userId, diaryId);
+    @Transactional(readOnly = true)
+    public DiaryFeedbackListRes getFeedbackList(final long userId, final long diaryId) {
+        diaryFacade.validateReadable(userId, diaryId);
 
         List<DiaryFeedbackListRes.DiaryFeedbackDto> feedbacks =
                 diaryFeedbackFacade.findByDiaryId(diaryId).stream()
-                .map(f -> new DiaryFeedbackListRes.DiaryFeedbackDto(
-                        f.getOriginPhrase(),
-                        f.getRewritePhrase(),
-                        f.getExplanation()
-                ))
-                .collect(Collectors.toList());
+                        .map(f -> new DiaryFeedbackListRes.DiaryFeedbackDto(
+                                f.getOriginPhrase(),
+                                f.getRewritePhrase(),
+                                f.getExplanation()
+                        ))
+                        .toList();
 
         return new DiaryFeedbackListRes(feedbacks);
     }
